; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_resource.c_resource_alignment.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_resource.c_resource_alignment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.resource = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @resource_alignment(%struct.resource* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.resource*, align 8
  store %struct.resource* %0, %struct.resource** %3, align 8
  %4 = load %struct.resource*, %struct.resource** %3, align 8
  %5 = getelementptr inbounds %struct.resource, %struct.resource* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = and i32 %6, 129
  switch i32 %7, label %15 [
    i32 129, label %8
    i32 128, label %11
  ]

8:                                                ; preds = %1
  %9 = load %struct.resource*, %struct.resource** %3, align 8
  %10 = call i32 @resource_size(%struct.resource* %9)
  store i32 %10, i32* %2, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load %struct.resource*, %struct.resource** %3, align 8
  %13 = getelementptr inbounds %struct.resource, %struct.resource* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %2, align 4
  br label %16

15:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %16

16:                                               ; preds = %15, %11, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @resource_size(%struct.resource*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
